# var-sync

./: .gitlab-ci.yml  README.md  projects.yml  pyproject.toml
var_sync/: __init__.py  main.py
